--- a/wordpress/docker-compose.yml
+++ b/wordpress/docker-compose.yml
@@ -4,7 +4,7 @@ services:
    db:
      image: mysql:5.7
      volumes:
-       - db_data:/var/lib/mysql
+       - ./wordpress-mysql/db_data:/var/lib/mysql
      restart: always
      environment:
        MYSQL_ROOT_PASSWORD: ${MYSQL_DATABASE_PASSWORD}
@@ -15,7 +15,7 @@ services:
    wordpress:
      image: wordpress:latest
      volumes:
-       - www:/var/www/html
+       - ./wordpress-mysql/www:/var/www/html
      ports:
        - 80
      restart: always
@@ -23,7 +23,4 @@ services:
        WORDPRESS_DB_HOST: db:3306
        WORDPRESS_DB_USER: wordpress
        WORDPRESS_DB_PASSWORD: wordpress
-
-volumes:
-    db_data: ./db_data
-    www: ./www
+       
