--- a/wordpress/docker-compose.yml
+++ b/wordpress/docker-compose.yml
@@ -4,7 +4,7 @@ services:
    db:
      image: mysql:5.7
      volumes:
-       - ./wordpress-mysql/db_data:/var/lib/mysql
+       - db_data:/var/lib/mysql
      restart: always
      environment:
        MYSQL_ROOT_PASSWORD: ${MYSQL_DATABASE_PASSWORD}
@@ -15,7 +15,7 @@ services:
    wordpress:
      image: wordpress:latest
      volumes:
-       - ./wordpress-mysql/www:/var/www/html
+       - www:/var/www/html
      ports:
        - 80
      restart: always
@@ -23,4 +23,9 @@ services:
        WORDPRESS_DB_HOST: db:3306
        WORDPRESS_DB_USER: wordpress
        WORDPRESS_DB_PASSWORD: wordpress
-       
+
+volumes:
+  db_data:
+    driver: local
+  www:
+    driver: local
