--- a/wordpress/docker-compose.yml
+++ b/wordpress/docker-compose.yml
@@ -2,7 +2,8 @@ version: '2'
 
 services:
    db:
-     image: mysql:latest
+     image: mysql:8
+     command: --default-authentication-plugin=mysql_native_password
      volumes:
        - db_data:/var/lib/mysql
      restart: always
