--- a/wordpress/docker-compose.yml
+++ b/wordpress/docker-compose.yml
@@ -3,7 +3,7 @@ version: '2'
 services:
    db:
      image: mysql:8
-     command: --default-authentication-plugin=mysql_native_password
+     command: '--default-authentication-plugin=mysql_native_password'
      volumes:
        - db_data:/var/lib/mysql
      restart: always
