--- a/wordpress/docker-compose.yml
+++ b/wordpress/docker-compose.yml
@@ -2,8 +2,10 @@ version: '2'
 
 services:
    db:
-     image: mysql:8
-     command: '--default-authentication-plugin=mysql_native_password'
+     image: mysql:latest
+     command: [
+        '--default_authentication_plugin=mysql_native_password'
+     ]
      volumes:
        - db_data:/var/lib/mysql
      restart: always
